Clarify failure definition in ipynb

--- a/data-science/Data science challenge.ipynb
+++ b/data-science/Data science challenge.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "A few notes to help:\n",
     "1. A good place to start is by addressing the noise due to comm errors. \n",
-    "2. There is a signal in the data that you can identify and exploit to predict failure.\n",
+    "2. There is a signal in the data that you can identify and exploit to predict failure. Each machine failed immediately after the last recorded timestamp in the remote monitoring timeseries data.\n",
     "3. If you can't find the signal in the noise, don't despair! We're much more interested in what you try and how you try it than in how successful you are at helping a fictional company with their fictional problems.\n",
     "4. Feel free to use any libraries you like, or even other programming languages. Your final results should be presented in this notebook, however.\n",
     "5. There are no constraints on the models or algorithms you can bring to bear. Some ideas include: unsupervised clustering algorithms such as k-means; hidden Markov models; forecasting models like ARMA; neural networks; survival models built using features extracted from the data; etc.\n",
