update email address

--- a/data-science/Data_science_exercise.ipynb
+++ b/data-science/Data_science_exercise.ipynb
@@ -27,7 +27,7 @@
     "   limitations of whatever approach or approaches you take.\n",
     "5. Don't feel compelled to use all the data if you're not sure how. Feel free\n",
     "   to focus on data from a single unit if that makes it easier to get started.\n",
-    "6. Don't hesitate to reach out with any questions!"
+    "6. Don't hesitate to reach out to datasciencejobs@tagup.io with any questions!"
    ]
   },
   {
