More explicitly demand Python submissions.

--- a/data-science/Data_science_exercise.ipynb
+++ b/data-science/Data_science_exercise.ipynb
@@ -18,8 +18,8 @@
     "A few notes to help:\n",
     "1. A good place to start is by addressing the noise due to communication\n",
     "   errors.\n",
-    "2. Feel free to use any libraries you like, or even other programming\n",
-    "   languages. Your final results should be presented in this notebook, however.\n",
+    "2. Feel free to use any libraries you like. Your final results should be\n
+    "   presented in this Python notebook.\n",
     "3. There are no constraints on the techniques you bring to bear, we are curious\n",
     "   to see how you think and what sort of resources you have in your toolbox.\n",
     "4. Be sure to clearly articulate what you did, why you did it, and how the\n",
