--- a/data-science/Data_science_exercise.ipynb
+++ b/data-science/Data_science_exercise.ipynb
@@ -12,18 +12,22 @@
     "\n",
     "You can download the data here: [exampleco_data](https://drive.google.com/open?id=1b12u6rzkG1AxB6wLGl7IBVoaoSoZLHNR)\n",
     "\n",
-    "__Your main objective: to develop an automated method to pinpoint the times of fault and failure in this machine__.  Keep in mind that you will be sharing these results with the executives at ExampleCo, so to the best of your ability, try to explain what you are doing, what you've shown, and why you think your predictions are good.\n",
+    "## Objectives \n",
+    "\n",
+    "1. **Your primary objective is to develop an approach to detect the beginning of the “faulty” period**. Ideally, this approach would give the ExampleCo engineers as much time as possible to shut down their machines before failure occurs (at which time all measurements drop close to 0). The best solutions are automated in the sense that they would generalize to similar but slightly different data; simpler methods are acceptable but are less likely to receive full credit.\n",
+    "2. Demonstrate the efficacy of your approach using visualizations. You must also include a simple explanation of these figures and why your approach is effective, ideally written in language that non-technical executives could understand.\n",
+    "3. Finally, and now with a technical audience in mind, discuss the strengths and limitations of your approach and be sure to mention other approaches that you would have liked to try if you had more time.\n",
     "\n",
     "\n",
-    "A few notes to help:\n",
+    "## Notes to help\n",
     "1. A good place to start is by addressing the noise due to communication\n",
     "   errors.\n",
     "2. Feel free to use any libraries you like. Your final results should be\n",
     "   presented in this Python notebook.\n",
     "3. There are no constraints on the techniques you bring to bear, we are curious\n",
     "   to see how you think and what sort of resources you have in your toolbox.\n",
-    "4. Be sure to clearly articulate what you did, why you did it, and how the\n",
-    "   results should be interpreted. In particular you should be aware of the\n",
+    "4. **Be sure to clearly articulate what you did, why you did it, and how the\n",
+    "   results should be interpreted**. In particular, you should be aware of the\n",
     "   limitations of whatever approach or approaches you take.\n",
     "5. Don't feel compelled to use all the data if you're not sure how. Feel free\n",
     "   to focus on data from a single unit if that makes it easier to get started.\n",
@@ -106,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
