--- a/data-engineering/data_engineering_exercise.ipynb
+++ b/data-engineering/data_engineering_exercise.ipynb
@@ -21,7 +21,7 @@
     "Bonus points:\n",
     "- Provide summary statistics for the ingressed data, including various statistical moments, and any other relevant descriptive statistics.\n",
     "- Integrate the static data into your design.  \n",
-    "- As part of a data processing pipeline, upload your arrays to AWS S3\n",
+    "- As part of a data processing pipeline, upload your arrays to AWS S3.\n",
     "- Demonstrate the efficacy of your approach using visualizations. You must also include a simple explanation of these figures and why your approach is effective, written in language that non-technical executives could understand.\n",
     "    \n",
     "A few notes to help:\n",
