Update contact email

--- a/data-engineering/data_engineering_exercise.ipynb
+++ b/data-engineering/data_engineering_exercise.ipynb
@@ -29,7 +29,7 @@
     "    \n",
     "2. There are no constraints on the techniques you bring to bear, we are curious to see how you think and what sort of resources you have in your toolbox.\n",
     "    \n",
-    "3. Don't hesitate to reach out to jon@tagup.io with any questions!\n",
+    "3. Don't hesitate to reach out to challenges@tagup.io with any questions!\n",
     "    \n",
     "\n",
     "## Tips\n",
