--- a/data-engineering/data_engineering_exercise.ipynb
+++ b/data-engineering/data_engineering_exercise.ipynb
@@ -16,12 +16,12 @@
     "Your objectives are:\n",
     "\n",
     "- Map the equipment data from SQL into arrays (or a single array). To keep things simple, you can ignore the static data to start. Be sure to describe your design choices and the array schema you chose.\n",
-    "- Apply filters to clean the data. For example, there are some clear outliers in the data due to communication errors from the sensor equipment. These bad measurements have no bearing on the ability for Tagup to provide insight from the data, and a good place to start is to find a way to filter them out.\n",
+    "- Apply filters to clean the data. There are some clear outliers in the data due to communication errors from the sensor equipment. These bad measurements have no bearing on the ability for Tagup to provide insight from the data, and a good place to start is to find a way to filter them out.\n",
     "- Demonstrate the efficacy of your approach using visualizations. You must also include a simple explanation of these figures and why your approach is effective, written in language that non-technical executives could understand.\n",
     "\n",
     "Bonus points:\n",
+    "- Integrate the static data into your design.\n",
     "- Provide summary statistics for the ingressed data, including various statistical moments, and any other relevant descriptive statistics.\n",
-    "- Integrate the static data into your design.  \n",
     "- As part of a data processing pipeline, upload your arrays to AWS S3.\n",
     "    \n",
     "A few notes to help:\n",
