--- a/data-engineering/data_engineering_exercise.ipynb
+++ b/data-engineering/data_engineering_exercise.ipynb
@@ -16,8 +16,8 @@
     "Your objectives are:\n",
     "\n",
     "- Map the equipment data from SQL into arrays (or a single array). To keep things simple, you can ignore the static data to start. Be sure to describe your design choices and the array schema you chose.\n",
-    "- Apply filters to clean the data. There are some clear outliers in the data due to communication errors from the sensor equipment. These bad measurements have no bearing on the ability for Tagup to provide insight from the data, and a good place to start is to find a way to filter them out.\n",
-    "- Demonstrate the efficacy of your approach using visualizations. You must also include a simple explanation of these figures and why your approach is effective, written in language that non-technical executives could understand.\n",
+    "- Apply filters to clean the data. There are some clear outliers in the data due to communication errors from the sensor equipment. A good place to start is to find a way to filter them out.\n",
+    "- Explain why your design and approach is effective, in language a non-technical executive can understand. If helpful, use visualizations to demonstrate the efficacy of your approach.\n",
     "\n",
     "Bonus points:\n",
     "- Integrate the static data into your design.\n",
@@ -101,7 +101,8 @@
    "hash": "39ee16c09488673965437987a2869652385c44c089bebde15996833fbab8938b"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
