finishing up approach 1 and deleting utils

--- a/data-science/Data_science_exercise.ipynb
+++ b/data-science/Data_science_exercise.ipynb
@@ -68,8 +68,297 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's first look at the data for a single machine and do some EDA. The hope is that this will generalize to other machines"
+    "# Let's start with an EDA of all the data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c4e09243cbc465390c6fc538e4d9058",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=9, description='machine', max=19), IntSlider(value=51, description='perc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def plot_data(machine=(0,19),percent=(2,100)):\n",
+    "    \n",
+    "    data = pd.read_csv(\"data/machine_\"+str(machine)+\".csv\", index_col=0)\n",
+    "\n",
+    "    #plot\n",
+    "    fig, ax = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "\n",
+    "    for i in range(4):\n",
+    "        \n",
+    "        ax[i//2, i%2].plot(range(len(data)), data[str(i)])\n",
+    "        ax[i//2, i%2].set_xlim(0, len(data)*percent/100)\n",
+    "        ax[i//2, i%2].set_xlabel('Time step')\n",
+    "        ax[i//2, i%2].set_title('Sensor '+str(i))\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scrolling through all the machines, we see that there are massive spikes due to the communications errors that mask out the signal. We need to remove these first. Since all the spikes occur over a value of 100, we can simply remove these values and replace them with a linear interpolation of the neighboring values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing spikes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_spikes(data):\n",
+    "\n",
+    "    cutoff = 100\n",
+    "    data[abs(data)>cutoff] = np.nan\n",
+    "    data = data.interpolate()\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "971b7bc9bb6d4f8ab0f4fa57ef28d3cd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=9, description='machine', max=19), IntSlider(value=51, description='perc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def plot_data(machine=(0,19),percent=(2,100)):\n",
+    "    \n",
+    "    data = pd.read_csv(\"data/machine_\"+str(machine)+\".csv\", index_col=0)\n",
+    "\n",
+    "    #plot\n",
+    "    fig, ax = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "\n",
+    "    for i in range(4):\n",
+    "        \n",
+    "        ax[i//2, i%2].plot(range(len(data)), remove_spikes(data[str(i)]))\n",
+    "        ax[i//2, i%2].set_xlim(0, len(data)*percent/100)\n",
+    "        ax[i//2, i%2].set_xlabel('Time step')\n",
+    "        ax[i//2, i%2].set_title('Sensor '+str(i))\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we plot only around 2% of the data, we see that the signals from most sensors and machines are generally oscillatory, but there is also a high frequency component to the signals we might want to smooth over. Let's do this by simply taking a moving average."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Smoothing the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smooth_data(data, window=10):\n",
+    "    return data.rolling(window=window, min_periods=1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa608c7d52e54425a46cbf560c6becfe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=9, description='machine', max=19), IntSlider(value=51, description='perc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def plot_data(machine=(0,19),percent=(2,100)):\n",
+    "    \n",
+    "    data = pd.read_csv(\"data/machine_\"+str(machine)+\".csv\", index_col=0)\n",
+    "    clean_data = smooth_data(remove_spikes(data))\n",
+    "\n",
+    "    #plot\n",
+    "    fig, ax = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "\n",
+    "    for i in range(4):\n",
+    "            \n",
+    "        ax[i//2, i%2].plot(range(len(data)), clean_data[str(i)])\n",
+    "        ax[i//2, i%2].set_xlim(0, len(data)*percent/100)\n",
+    "        ax[i//2, i%2].set_xlabel('Time step')\n",
+    "        ax[i//2, i%2].set_title('Sensor '+str(i))\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's much better. <br />\n",
+    "At this stage it's clear that there are 3 modes of operation: *normal, faulty*, and *failed*. <br /> \n",
+    "These seem to be characterized as follows:\n",
+    "* Normal mode: oscillatory with constant frequency and amplitude\n",
+    "* Faulty mode: oscillatory, but with highly varying amplitude/frequency\n",
+    "* Failed mode: near zero signal\n",
+    "\n",
+    "<br />\n",
+    "Now, we need to build a model that can tell us the operating mode of the system. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Approack 1: Spectrogram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we do not have labelled data, we need to use some form of unsupervised learning. <br />\n",
+    "One option is to take batches of the data and see how they relate to each other. Given the nature of the data, we care about variations in frequency and aplitude over time. This suggests that a spectrogram would be a good representation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing the spectrogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af0a9b9747154dac8d99f640a0fa1d56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=9, description='machine', max=19), IntSlider(value=51, description='perc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def plot_spectrogram(machine=(0, 19), percent=(2, 100), segment_size=[16, 32, 64, 128, 256]):\n",
+    "\n",
+    "    data = pd.read_csv(\"data/machine_\"+str(machine)+\".csv\", index_col=0)\n",
+    "    clean_data = smooth_data(remove_spikes(data))\n",
+    "\n",
+    "    fig, ax = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "\n",
+    "    for i in range(4):\n",
+    "        f, t, Sxx = signal.spectrogram(clean_data[str(i)], nperseg=segment_size)\n",
+    "\n",
+    "        ax[i//2, i%2].pcolormesh(t, f, Sxx, shading='nearest', cmap=\"coolwarm\")\n",
+    "        ax[i//2, i%2].set_ylabel('Frequency')\n",
+    "        ax[i//2, i%2].set_xlabel('Time')\n",
+    "        ax[i//2, i%2].set_xlim(0, t[-1]*percent/100)\n",
+    "        ax[i//2, i%2].set_ylim(0, 0.2)\n",
+    "        ax[i//2, i%2].set_title('Sensor '+str(i))\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -522,6 +811,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -538,13 +834,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "457a15d680fe4280b653d37da648aba9",
+       "model_id": "ead693e9e5e84604a61e5742d78a233a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -587,22 +883,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "spec_data = utils.spectrogram_data(clean_data)\n",
     "\n",
-    "def rescale_spec_data(spec_data):\n",
-    "\n",
-    "    rescaled_data = spec_data.copy()\n",
-    "\n",
-    "    for sensor in spec_data.columns.unique(0):\n",
-    "        rescaled_data[sensor] /= (rescaled_data[sensor].iloc[0].max())\n",
-    "\n",
-    "    return rescaled_data\n",
-    "\n",
-    "rescaled_data = rescale_spec_data(spec_data)"
+    "rescaled_data = utils.rescale_spec_data(spec_data)"
    ]
   },
   {
@@ -614,13 +901,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f0e585093fd41329718338253c91389",
+       "model_id": "99128a3a2edc4999be00938cc9c49301",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,7 +941,141 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "new"
+    "## Does this genralize to another machine?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the full \"pipeline\" with some hyperparameters that can be tuned to a specific machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spectrogram_data(data:pd.DataFrame, nperseg=64)->pd.DataFrame:\n",
+    "    \n",
+    "    spectra = []\n",
+    "\n",
+    "    for sensor in data.columns:\n",
+    "        \n",
+    "        f, t, Sxx = signal.spectrogram(data[sensor], nperseg=nperseg)\n",
+    "\n",
+    "        index = pd.Series(t.astype(int), name=\"time\")\n",
+    "        columns = pd.MultiIndex.from_tuples([(sensor, x) for x in f], names=[\"sensor\", \"frequency\"])\n",
+    "\n",
+    "        spectra.append(pd.DataFrame(Sxx.T, index=index, columns=columns))\n",
+    "\n",
+    "    return pd.concat(spectra, axis=1)\n",
+    "\n",
+    "def rescale_spec_data(spec_data):\n",
+    "\n",
+    "    rescaled_data = spec_data.copy()\n",
+    "\n",
+    "    for sensor in spec_data.columns.unique(0):\n",
+    "        rescaled_data[sensor] /= (rescaled_data[sensor].iloc[0].max())\n",
+    "\n",
+    "    return rescaled_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_faults(data, window=10, nperseg=64, threshold=1):\n",
+    "    \n",
+    "    # a function that returns the times of the detected faults\n",
+    "\n",
+    "    clean_data = smooth_data(remove_spikes(data), window=window)\n",
+    "    spec_data = spectrogram_data(clean_data, nperseg=nperseg)\n",
+    "    rescaled_data = rescale_spec_data(spec_data)\n",
+    "    error = np.linalg.norm(rescaled_data-rescaled_data.iloc[0], axis=1)\n",
+    "\n",
+    "    return list(rescaled_data.index[error > threshold])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "detect_faults(pd.read_csv(\"data/machine_0.csv\", index_col=0), nperseg=64)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8766d7dbd4cd49969103e88476ac24a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=9, description='machine', max=19), IntSlider(value=51, description='perc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def plot_data_with_faults(machine=(0,19),percent=(2,100)):\n",
+    "\n",
+    "    new_data = pd.read_csv(\"data/machine_\"+str(machine)+\".csv\", index_col=0)\n",
+    "\n",
+    "    faults = detect_faults(new_data)\n",
+    "    if faults:\n",
+    "        time = min(faults)\n",
+    "    else:\n",
+    "        time=len(data)\n",
+    "\n",
+    "    clean_data = smooth_data(remove_spikes((new_data)))\n",
+    "\n",
+    "    #plot\n",
+    "    fig, ax = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "    \n",
+    "\n",
+    "    for i in range(4):\n",
+    "        ax[i//2, i%2].plot(range(time), clean_data.iloc[:int(time)][str(i)])\n",
+    "        ax[i//2, i%2].plot(range(time, len(new_data)), clean_data.iloc[int(time):][str(i)])\n",
+    "\n",
+    "        # ax[i//2, i%2].plot(range(len(data)), clean_data[str(i)])\n",
+    "        ax[i//2, i%2].set_xlim(0, len(new_data)*percent/100)\n",
+    "        ax[i//2, i%2].set_xlabel('Time step')\n",
+    "        ax[i//2, i%2].set_title('Sensor '+str(i))\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This approach seems to work well for very few of the machines. Browsing through"
    ]
   }
  ],
