--- a/data-science/Data_science_exercise.ipynb
+++ b/data-science/Data_science_exercise.ipynb
@@ -57,7 +57,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import utils\n",
     "from scipy import signal\n",
     "from ipywidgets import interact\n",
     "\n",
@@ -73,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c4e09243cbc465390c6fc538e4d9058",
+       "model_id": "76ed26d04d6e4c5b99a1bfd7f3e77501",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,13 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "971b7bc9bb6d4f8ab0f4fa57ef28d3cd",
+       "model_id": "67b240f218b04215a20bbd3d8eac8a89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa608c7d52e54425a46cbf560c6becfe",
+       "model_id": "234cc319eed34f5f92f7702b8881c8ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,13 +284,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af0a9b9747154dac8d99f640a0fa1d56",
+       "model_id": "34165fd032da4b1f96e604657c125cb7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -361,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +377,7 @@
     "\n",
     "        spectra.append(pd.DataFrame(Sxx.T, index=index, columns=columns))\n",
     "\n",
-    "    return \n",
+    "    return pd.concat(spectra, axis=1)\n",
     "\n",
     "\n",
     "def rescale_spec_data(spec_data:pd.DataFrame)->pd.DataFrame:\n",
@@ -400,13 +399,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e2e008827034a7d9bec18391e65d492",
+       "model_id": "2fae1e45154947c5b5f5321f83649666",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +425,6 @@
     "    clean_data = smooth_data(remove_spikes(data))\n",
     "\n",
     "    rescaled_data = rescale_spec_data(spectrogram_data(clean_data))\n",
-    "    rescaled_data.fillna(0)\n",
     "\n",
     "    X = rescaled_data.values\n",
     "    plt.plot(rescaled_data.index, np.linalg.norm(X-X[0], axis=1))\n",
@@ -445,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,13 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e6ee4d203c7476b8e649cbff7913814",
+       "model_id": "cb838b968e8c4f76916b39ba9a75280a",
        "version_major": 2,
        "version_minor": 0
       },
