regression with linear and random forest

--- a/data-science/Data_science_exercise.ipynb
+++ b/data-science/Data_science_exercise.ipynb
@@ -59,6 +59,10 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import signal\n",
     "from ipywidgets import interact\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,13 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67b240f218b04215a20bbd3d8eac8a89",
+       "model_id": "a7ab2ea985374cd49d9e98d2493a5869",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "234cc319eed34f5f92f7702b8881c8ee",
+       "model_id": "bdcca16a74bf4fb9aa1240fa6e6c07d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,13 +472,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb838b968e8c4f76916b39ba9a75280a",
+       "model_id": "8efa593cd6fe4226b2998a377ef280b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -535,8 +539,327 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Approach 2\n",
-    "🚧 In progress 🚧"
+    "# Approach 2: regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can create a sliding window of some fixed size and use the sensor data in that window to predict some future readings. If the model is only trained for the normal mode of operation we might expect that the model performs badly in the other modes of operation. First let's create a dataset that has the features and labels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_regression_data(data, start=10, end=110, step=10, pred_size=2):\n",
+    "\n",
+    "    clean_data = smooth_data(remove_spikes(data), start)\n",
+    "\n",
+    "    X, y = [], []\n",
+    "\n",
+    "    for i in range(start, (end//step)*step):\n",
+    "        X.append(clean_data.values[i : i+step].flatten())\n",
+    "        y.append(clean_data.values[i+step : i+step+pred_size].flatten())\n",
+    "    \n",
+    "    return np.array(X), np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Traditional models: Linear/random forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's stick to machine 0  for now. First we establish a baseline MSE by simply predicting the last value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline MSE:  8.016965736892532\n"
+     ]
+    }
+   ],
+   "source": [
+    "start, end, step, pred_size = 10, 110, 10, 2\n",
+    "\n",
+    "data = pd.read_csv(\"data/machine_0.csv\", index_col=0)\n",
+    "X, y = process_regression_data(data, start, end, step, pred_size)\n",
+    "\n",
+    "y_pred = np.tile(X[:, -4:], pred_size)\n",
+    "\n",
+    "print(\"Baseline MSE: \", mean_squared_error(y, y_pred)/pred_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see if we can improve the baseline MSE by building a simple linear model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear model MSE:  0.05683105403894098\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipe = make_pipeline(StandardScaler(), LinearRegression())\n",
+    "\n",
+    "pipe.fit(X, y)\n",
+    "\n",
+    "y_pred = pipe.predict(X)\n",
+    "\n",
+    "print(\"Linear model MSE: \", mean_squared_error(y, y_pred)/pred_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's a massive improvement in the MSE. Now let's generate predictions for the rest of the time series to see how we do"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f091438be5424ca29b8c60e7ed514bb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=51, description='percent', min=2), Output()), _dom_classes=('widget-inte…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "X_test, y_test = process_regression_data(data, start=start, end=2900, step=step, pred_size=pred_size)\n",
+    "y_pred = pipe.predict(X_test)\n",
+    "\n",
+    "@interact\n",
+    "def plot_linear_model(percent=(2,100)):\n",
+    "\n",
+    "    #plot\n",
+    "    fig, ax = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "\n",
+    "    for i in range(4):\n",
+    "        ax[i//2, i%2].plot(range(start, start+len(y_pred)), y_test[:, i], ls='', marker='o', ms=2, label=\"actual\")\n",
+    "        ax[i//2, i%2].plot(range(start, start+len(y_pred)), y_pred[:, i], ls='--', label=\"predicted\")\n",
+    "        ax[i//2, i%2].set_xlim(0, len(y_pred)*percent/100)\n",
+    "        ax[i//2, i%2].set_xlabel('Time step')\n",
+    "        ax[i//2, i%2].set_title('Sensor '+str(i))\n",
+    "    \n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, we do quite well in the normal mode, but not so, in the faulty mode. We can once again set a threshold for the error to find where the faulty behavior occurs. Here is the whole thing for every machine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_faults_regression(data, model, threshold=10, **kwargs):\n",
+    "    #Function to detect faults using regression\n",
+    "\n",
+    "    #process regression data (include smoothing)\n",
+    "    X_train, y_train = process_regression_data(data, **kwargs)\n",
+    "\n",
+    "    kwargs['end'] = 2900\n",
+    "    X_test, y_test = process_regression_data(data, **kwargs)\n",
+    "\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    pred_length = kwargs.get(\"pred_length\", 2)\n",
+    "    errors = np.average((y_pred-y_test)**2, axis=1)/pred_length\n",
+    "\n",
+    "    start = kwargs.get(\"start\", 10)\n",
+    "    ind = np.arange(start, kwargs[\"end\"])[errors > threshold]\n",
+    "\n",
+    "    if len(ind)==0:\n",
+    "        time = len(data)\n",
+    "    else:\n",
+    "        time = start+ind[0]\n",
+    "\n",
+    "    return time\n",
+    "\n",
+    "\n",
+    "\n",
+    "def plot_faults(data, time, percent=50):\n",
+    "    #Plot the data where time is the earliest detected fault\n",
+    "    fig, ax = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "    \n",
+    "\n",
+    "    for i in range(4):\n",
+    "        ax[i//2, i%2].plot(range(time), data.iloc[:int(time)][str(i)])\n",
+    "        ax[i//2, i%2].plot(range(time, len(data)), data.iloc[int(time):][str(i)])\n",
+    "\n",
+    "        ax[i//2, i%2].set_xlim(0, len(data)*percent/100)\n",
+    "        ax[i//2, i%2].set_xlabel('Time step')\n",
+    "        ax[i//2, i%2].set_title('Sensor '+str(i))\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd0df70b31da4142a23a1c88ecfd2a98",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=9, description='machine', max=19), IntSlider(value=51, description='perc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def linear_model(machine=(0, 19), percent=(2, 100)):\n",
+    "\n",
+    "    data = pd.read_csv(\"data/machine_\"+str(machine)+\".csv\", index_col=0)\n",
+    "    clean_data = smooth_data(remove_spikes(data))\n",
+    "\n",
+    "    time = detect_faults_regression(data, LinearRegression())\n",
+    "\n",
+    "    plot_faults(clean_data, time, percent)\n",
+    "\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "222839455c0a42678b7f70251aa15a85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=9, description='machine', max=19), IntSlider(value=51, description='perc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def linear_model(machine=(0, 19), percent=(2, 100)):\n",
+    "\n",
+    "    data = pd.read_csv(\"data/machine_\"+str(machine)+\".csv\", index_col=0)\n",
+    "    clean_data = smooth_data(remove_spikes(data))\n",
+    "\n",
+    "    time = detect_faults_regression(data, RandomForestRegressor(), threshold=20)\n",
+    "\n",
+    "    plot_faults(clean_data, time, percent)\n",
+    "\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1673871403615263"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X)\n",
+    "\n",
+    "mean_squared_error(y, y_pred)"
    ]
   },
   {
